Fix theme selector spacing

--- a/Libadwaita/styles/theme-selector.less
+++ b/Libadwaita/styles/theme-selector.less
@@ -8,7 +8,7 @@
 	background: @window_bg_color !important;
 	border: 1px solid @popover_border_color !important;
 	border-radius: @card_radius !important;
-	height: 400px !important;
+	height: 410px !important;
 
 // 	.modal-close {
 // 		width: 16px !important;
@@ -40,7 +40,7 @@
 		color: @text_color !important;
 		font-size: @text_size;
 		font-weight: bold;
-		margin-top: -18px;
+		margin-top: -12px;
 		margin-bottom: 3px;
 	}
 
